--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,7 +172,7 @@ img{
   background: -o-linear-gradient(left, #ECE9E6 0%, #FFFFFF 100%);
   background: linear-gradient(90deg, #ECE9E6 0%, #FFFFFF 100%);
   padding-bottom: 150px;
-  height: 100%;
+  height: 100vh;
 }
 .middle_content{
   padding-top: 244px;
